--- a/Freight/Views/SurchargeRate/Index.cshtml
+++ b/Freight/Views/SurchargeRate/Index.cshtml
@@ -20,19 +20,19 @@
                 </li>
 
                 </a>
-                <a href="/UAT/Freight_Wireframe/UploadRate/Index" style="text-decoration:none">
+                <a href="/UploadRate/Index" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" class="collapsed">
                     <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
                     Upload rate
                 </li>
                 </a>
-                <a href="/UAT/Freight_Wireframe/SurchargeRate/Index" style="text-decoration:none">
+                <a href="/SurchargeRate/Index" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" class="collapsed active">
                     <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
                     Surcharge Rate
                 </li>
                 </a>
-                <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
+                <a href="/Home/AssignRole" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed">
                     <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
                     User
@@ -50,7 +50,7 @@
                 <div class="row">
                     <div class="col-xs-6 col-md-6" style="margin-top: 15px; ">
                         <label class="col-md-12">Year</label>
-                        <select class="form-select form-control-lg mb-5 col-md-9" id="carrierSelect" style=" height: 48px;">
+                        <select class="form-select form-control-lg mb-5 col-md-9" id="carrierSelect">
                             <option value="2017">2017</option>
                             <option value="2018">2018</option>
                             <option value="2019">2019</option>
@@ -62,17 +62,17 @@
                 <div class="row" hidden id="divMonth">
                     <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
                         <label class="col-md-12 row">Month</label>
-                        <input class="form-select form-control-lg mb-5 col-md-12" type="text" readonly id="month" placeholder="Month" value="" style="height: 48px;" />
+                        <input class="form-select form-control-lg mb-5 col-md-12" type="text" readonly id="month" placeholder="Month" value=""/>
                     </div>
                     <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
                         <label class="col-md-12 row">DHL (%)</label>
                         <input id="tdSelectdhl" value="" hidden />
-                        <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="dhl" value="" style="height: 48px;" />
+                        <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="dhl" value="" />
                     </div>
                     <div class="col-xs-4 col-md-4" style="margin-top: 15px; ">
                         <label class="col-md-12 row">FedEx (%)</label>
                         <input id="tdSelectfedex" value="" hidden />
-                        <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="fedex" value="" style="height: 48px;" />
+                        <input class="form-select form-control-lg mb-5 col-md-12" type="text" id="fedex" value="" />
                     </div>
                 </div>
                 <div class="row ml-0" style="margin-top:20px">
