--- a/Freight/Views/UploadRate/Index.cshtml
+++ b/Freight/Views/UploadRate/Index.cshtml
@@ -50,7 +50,7 @@
                 <div class="row">
                     <div class="col-xs-6 col-md-6" style="margin-top: 15px; ">
                         <label class="col-md-12">Carrier</label>
-                        <select class="form-select form-control-lg mb-5 col-md-8" id="carrierSelect" style=" height: 48px;">
+                        <select class="form-select form-control-lg mb-5 col-md-8" id="carrierSelect">
                             <option value="-1">Please Select a Carrier</option>
                             <option value="-1">DHL</option>
                             <option value="-1">FedEx</option>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-xs-6 col-md-6" style="margin-top: 15px; ">
                         <label class="col-md-12 row">Year</label>
-                        <select class="form-select form-control-lg mb-5 col-md-8" id="carrierSelect" style=" height: 48px;">
+                        <select class="form-select form-control-lg mb-5 col-md-8" id="carrierSelect">
                             <option value="0">Please Select Year</option>
                             <option value="2017">2017</option>
                             <option value="2018">2018</option>
@@ -83,7 +83,12 @@
                 </div>
                 <div class="row ml-0">
                     <div>
-                        <a href="/templateDHLFedEx.xlsx" download><img src="https://img.icons8.com/material-outlined/24/000000/download--v1.png" />Download teamplate DHL and FedEx</a>
+                        <a href="/templateDHLFedEx.xlsx" download><img src="https://img.icons8.com/material-outlined/24/000000/download--v1.png" />Download teamplate DHL</a>
+                    </div>
+                </div>
+                <div class="row ml-0">
+                    <div>
+                        <a href="/templateDHLFedEx.xlsx" download><img src="https://img.icons8.com/material-outlined/24/000000/download--v1.png" />Download teamplate FedEx</a>
                     </div>
                 </div>
             </div>
