--- a/Freight/Views/Home/Index.cshtml
+++ b/Freight/Views/Home/Index.cshtml
@@ -9,21 +9,28 @@
         </div>
         <hr role="separator" aria-orientation="horizontal" class="my-8 v-divider theme--light">
         <form action="/Home/Index" method="post" enctype="multipart/form-data">
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email </label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" name="email" style="margin-left:35px;max-width:380px">
+            <div class="form-group row">
+                <label class="col-md-3"><img src="https://img.icons8.com/ios-glyphs/30/000000/user--v1.png" /></label>
+                <input type="email" class="col-md-9" style="margin-left: -30px;" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" name="email" style="max-width:380px">
             </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" style="margin-left: 35px; max-width: 380px">
+            <div class="form-group row">
+                <label class="col-md-3"><img src="https://img.icons8.com/ios-glyphs/30/000000/password.png" /></label>
+                <input type="password" class="col-md-9" style="margin-left: -30px;" id="exampleInputPassword1" placeholder="Password" name="password">
+            </div>
+            <div class="form-group row" style="margin-left:39px">
+                <input type="checkbox"id="staff" /> <p style="margin-left:22px">I am not Mentor Media Staff</p>
             </div>
             <div class="form-group form-check">
-                <button class="btn btn-primary btn-lg" type="submit">Sign In</button>
+                <button class="btn btn-primary btn-lg" id="signin" type="button">Sign In</button>
                 <button class="btn btn-primary btn-lg" onclick="GoToSyncUp()" type="button">Sign Up</button>
             </div>
-        <div id="formFooter" style="margin-top:20px">
-        </div>
-    </div>
+
+            <div class="form-group form-check">
+                <p>For Mentor Media Employee, Please click "LOGIN" directly.</p>
+            </div>
+            <div id="formFooter" style="margin-top:20px">
+            </div>
+</div>
 </div>
 <script>
     $("#submitButton").click(function () {
@@ -32,4 +39,20 @@
     function GoToSyncUp() {
         location.href = '@Url.Action("SignUp","Home")';
     }
+    $("#signin").click(function () {
+        debugger
+        var s = $("#exampleInputEmail1").val();
+        var s1 = $("#exampleInputPassword1").val();
+        if ($("#staff").prop("checked") === true) {
+            if (s === "" || s1 === "") {
+                alert("Please enter Email and Password!");
+            }
+            else {
+                location.href = '/UAT/Freight_Wireframe/Calculator/Index?email=' + s;
+            }
+        }
+        else {
+            location.href = '/UAT/Freight_Wireframe/Calculator/Index?email=' + s;
+        }
+    });
 </script>
