--- a/Freight/Views/Home/SignUp.cshtml
+++ b/Freight/Views/Home/SignUp.cshtml
@@ -11,16 +11,29 @@
         <hr role="separator" aria-orientation="horizontal" class="my-8 v-divider theme--light">
         <form>
             <div class="form-group">
-                <label for="exampleInputEmail1">Email </label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" style="margin-left:35px;max-width:380px">
+                <label style="width:380px">Your Name</label>
+                <input type="text" class="form-group" id="exampleInputName1" placeholder="Your Name" />
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="margin-left: 35px; max-width: 380px">
+                <label style="width:380px">Email</label>
+                <input type="text" class="form-group" id="exampleInputEmail1" placeholder="Email" />
             </div>
             <div class="form-group">
-                <label for="exampleInputConfirm1">Confirm Password</label>
-                <input type="password" class="form-control" id="exampleInputConfirm1" placeholder="Confirm Password" style="margin-left: 35px; max-width: 380px">
+                <label style="width: 380px;">Site Id</label>
+                <select id="selectSiteID" class="form-select form-control-lg mb-5" style="width:380px">
+                    <option>MMCA</option>
+                    <option>MMCD</option>
+                    <option>MMCN</option>
+                    <option>MMCQ</option>
+                    <option>MMCQCBZ</option>
+                    <option>MMCZ</option>
+                    <option>MMJZ</option>
+                    <option>MMKS</option>
+                    <option>MMSG</option>
+                    <option>MMSH</option>
+                    <option>MMSZ</option>
+                    <option>MMXM</option>
+                </select>                
             </div>
             <div class="form-group form-check">
                 <button class="btn btn-primary btn-lg" id="signup" type="button">Sign Up</button>
@@ -37,5 +50,6 @@
     })
     $("#signup").click(function () {
         alert("Thank you for registering at the Mentor Media Hub portal.We will send you an activation email upon your request is approved.");
+        location.href = '@Url.Action("Index","Home")';
     })
 </script>
