--- a/Freight/Views/Home/AssignRole.cshtml
+++ b/Freight/Views/Home/AssignRole.cshtml
@@ -108,7 +108,7 @@
                         <input type="text" id="myInput" style=" max-width: 395px" class="form-control" onkeyup="search()" placeholder="Search for email..">
                     </div>
                     <div class="col-md-6 row">
-                        <label>Status:</label>
+                        <label style="margin-right: 21px;">Status:</label>
                         <input type="checkbox" id="pending" value="pending" onclick="myFunc(1)" /><p style="margin-left: 3px; margin-right: 15px;">Pending</p>
                         <input type="checkbox" id="approved" value="approved" onclick="myFunc(2)" /><p style="margin-left: 3px; margin-right: 15px;">Approved</p>
                         <input type="checkbox" id="active" value="active" onclick="myFunc(3)" /><p style="margin-left: 3px; margin-right: 15px;">Active</p>
