--- a/Freight/Views/SurchargeRate/Index.cshtml
+++ b/Freight/Views/SurchargeRate/Index.cshtml
@@ -20,19 +20,19 @@
                 </li>
 
                 </a>
-                <a href="/UploadRate/Index" style="text-decoration:none">
+                <a href="/UAT/Freight_Wireframe/UploadRate/Index" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" class="collapsed">
                     <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
                     Upload rate
                 </li>
                 </a>
-                <a href="/SurchargeRate/Index" style="text-decoration:none">
+                <a href="/UAT/Freight_Wireframe/SurchargeRate/Index" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" class="collapsed active">
                     <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
                     Surcharge Rate
                 </li>
                 </a>
-                <a href="/Home/AssignRole" style="text-decoration:none">
+                <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed">
                     <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
                     User
@@ -49,7 +49,7 @@
                 <h3>Surcharge Rate</h3>
                 <div class="row">
                     <div class="col-xs-6 col-md-6" style="margin-top: 15px; ">
-                        <label class="col-md-12">Year</label>
+                        <label class="col-md-12 row">Year</label>
                         <select class="form-select form-control-lg mb-5 col-md-9" id="carrierSelect">
                             <option value="2017">2017</option>
                             <option value="2018">2018</option>
