--- a/Freight/Views/UploadRate/Index.cshtml
+++ b/Freight/Views/UploadRate/Index.cshtml
@@ -49,7 +49,7 @@
                 <h3>Upload Rate</h3>
                 <div class="row">
                     <div class="col-xs-6 col-md-6" style="margin-top: 15px; ">
-                        <label class="col-md-12">Carrier</label>
+                        <label class="col-md-12 row">Carrier</label>
                         <select class="form-select form-control-lg mb-5 col-md-8" id="carrierSelect">
                             <option value="-1">Please Select a Carrier</option>
                             <option value="-1">DHL</option>
