--- a/Freight/Views/About/Index.cshtml
+++ b/Freight/Views/About/Index.cshtml
@@ -191,7 +191,7 @@
             </tbody>
         </table>
     </div>
-    <a href='/shipping-cost1.xlsx' target='_blank'>Export</a></section>
+    <a href='./shipping-cost1.xlsx' target='_blank'>Export</a></section>
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script>
     $(document).ready(function () {
