--- a/Freight/Views/Home/SignUp.cshtml
+++ b/Freight/Views/Home/SignUp.cshtml
@@ -49,7 +49,7 @@
         window.location.href = "/About";
     })
     $("#signup").click(function () {
-        alert("Thank you for registering at the Mentor Media Hub portal.We will send you an activation email upon your request is approved.");
+        alert("Thank you for registering at the Mentor Media Freight Rate Portal. We will send you an activation email upon your request is approved.");
         location.href = '@Url.Action("Index","Home")';
     })
 </script>
