--- a/Freight/Views/Home/Index.cshtml
+++ b/Freight/Views/Home/Index.cshtml
@@ -17,17 +17,12 @@
                 <label class="col-md-3"><img src="https://img.icons8.com/ios-glyphs/30/000000/password.png" /></label>
                 <input type="password" class="col-md-9" style="margin-left: -30px;" id="exampleInputPassword1" placeholder="Password" name="password">
             </div>
-            <div class="form-group row" style="margin-left:39px">
-                <input type="checkbox"id="staff" /> <p style="margin-left:22px">I am not Mentor Media Staff</p>
-            </div>
             <div class="form-group form-check">
-                <button class="btn btn-primary btn-lg" id="signin" type="button">Sign In</button>
-                <button class="btn btn-primary btn-lg" onclick="GoToSyncUp()" type="button">Sign Up</button>
+                <button class="btn btn-primary btn-lg" id="signin" type="button">Login</button>
+                <button class="btn btn-primary btn-lg" onclick="GoToSigncUp()" type="button">Sign Up</button>
+                <button class="btn btn-primary btn-lg fw" onclick="SSO()" type="button">Login As Mentor Media Staff</button>
             </div>
 
-            <div class="form-group form-check">
-                <p>For Mentor Media Employee, Please click "LOGIN" directly.</p>
-            </div>
             <div id="formFooter" style="margin-top:20px">
             </div>
 </div>
@@ -36,9 +31,14 @@
     $("#submitButton").click(function () {
         window.location.href = "/About";
     })
-    function GoToSyncUp() {
+    function GoToSigncUp() {
         location.href = '@Url.Action("SignUp","Home")';
     }
+
+    function SSO() {
+        location.href = '/UAT/Freight_Wireframe/Calculator/Index?email=staff1@gmail.com';
+    }
+
     $("#signin").click(function () {
         debugger
         var s = $("#exampleInputEmail1").val();
