--- a/Freight/Views/Shared/_Layout.cshtml
+++ b/Freight/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/&#64;mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <link href="~/Style/custom.css" rel="stylesheet" />
 </head>
 <body>
     <div id="app">
